--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,19 +4,19 @@
   margin: 0 auto;
   padding: 2rem;
 
-  font-weight: normal;
+  font-weight: 1000;
 }
 
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(242, 241, 243);
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(155, 45%, 40%, 0.2);
   }
 }
 
